styles/markdown-content.css
.markdown-content {
  & h1,
  & h2,
  & h3,
  & h4,
  & h5,
  & h6 {
    @apply text-lg font-bold mb-4 mt-8;
  }

  & h1 {
    @apply text-3xl mb-6;

    &:first-child {
      @apply mt-0;
    }
  }

  & h2 {
    @apply text-2xl mb-4;
  }

  & h3 {
    @apply text-xl;
  }

  & hr {
    @apply my-6;
  }

  & p {
    @apply mb-3;
  }

  & blockquote {
    @apply my-4 ml-4 pl-5 py-3 border-gray-800 border-l-2 italic font-serif text-gray-800 text-xl;

    & p {
      @apply mb-0;
    }
  }

  & ul {
    @apply list-disc ml-4;
  }

  & ol {
    @apply list-decimal ml-4;
  }

  & > ul,
  & > ol {
    @apply mb-6 ml-8;
  }

  & code {
    @apply font-mono not-italic text-base text-gray-400;
  }

  & pre {
    @apply border-2 border-gray-400 p-4 bg-gray-300 rounded-lg mb-6 mt-4 overflow-auto;
  }

  & :not(pre) > code {
    @apply bg-gray-300 px-1 rounded text-gray-800;
  }

  & table {
    @apply table-auto mb-10;

    & thead tr th {
      @apply px-4 py-2;
    }

    & tbody tr {
      &:nth-child(even) {
        @apply bg-gray-200;
      }

      & td {
        @apply border px-4 py-2;
      }
    }
  }

  & mark {
    @apply bg-yellow-300 px-2 rounded;

    padding-top: 1px;
    padding-bottom: 1px;
  }

  & a {
    @apply text-gray-700 underline;

    &:hover {
      @apply text-gray-900;
    }
  }

  & img {
    @apply rounded-lg;
  }
}

@screen md {
  .markdown-content {
    & > ul,
    & > ol {
      @apply ml-12;
    }
  }
}

@screen dark {
  .markdown-content {
    & a {
      @apply text-teal-500;

      &:hover {
        @apply text-teal-400;
      }
    }

    & blockquote {
      @apply text-gray-200 border-white;
    }

    & pre {
      @apply border-purple-600;
    }

    & table {
      & tbody tr {
        &:nth-child(even) {
          @apply bg-gray-600;
        }
      }
    }
  }
}

